--- a/supervisord.conf
+++ b/supervisord.conf
@@ -7,6 +7,7 @@ logfile=/var/log/supervisor/supervisord.log ; (main log file;default $CWD/superv
 pidfile=/var/run/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 childlogdir=/var/log/supervisor            ; ('AUTO' child log dir, default $TEMP)
 loglevel=debug
+user=root
 
 [supervisorctl]
 serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
@@ -30,7 +31,7 @@ redirect_stderr=true
 [program:python]
 priority=15
 directory=/data
-command=python /scan.py
+command=python3 /scan.py
 user=root
 autostart=true
 autorestart=true
